[gd_scene load_steps=12 format=3 uid="uid://c00cvpjded7e4"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_jp21q"]
[ext_resource type="Texture2D" uid="uid://ktt6byuqwtxw" path="res://assets/sprites/entities/doors.png" id="1_lx7by"]
[ext_resource type="AudioStream" uid="uid://dtetfdpb1ux6w" path="res://assets/sounds/tap.wav" id="3_akav6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_75vtm"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 3, 65, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p0gs"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 3, 65, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmy12"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 35, 65, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40oly"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 67, 65, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xlg"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 99, 65, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88nun"]
atlas = ExtResource("1_lx7by")
region = Rect2(0, 131, 65, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x6wlm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vtm")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p0gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmy12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40oly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7xlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88nun")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1toph"]
size = Vector2(36, 28)

[node name="door" type="Area2D"]
position = Vector2(1, -16)
collision_mask = 2
script = ExtResource("1_jp21q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x6wlm")
animation = &"close"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_1toph")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_akav6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
